# the-site

./: .gitignore  Cargo.toml  LICENSE.md  README.md  Trunk.toml  index.html  index.scss  package.json  pnpm-lock.yaml  rust-analyzer.toml  wrangler.jsonc
src/: about_me.rs  app.rs  banner.rs  disclaimer.rs  item.rs  main.rs  main.ts  skills.rs  terminal.ts  util.ts
src/assets/style/: colors.scss  index.scss  terminal.scss
src/components/: github.rs  mod.rs  text.rs
src/footer/: disclaimer.rs  mod.rs
src/header/: mod.rs
src/hf/footer/: disclaimer.rs  mod.rs
src/hf/header/: mod.rs
src/projects/: item.rs  mod.rs  technologies.rs
src/terminal/: command.ts  element.ts  index.ts
src/the_site/: about_me.rs  mod.rs  skills.rs
src/the_site/components/: github.rs  mod.rs
src/the_site/hf/: mod.rs
src/the_site/hf/footer/: disclaimer.rs  mod.rs
src/the_site/hf/header/: mod.rs
src/the_site/projects/: item.rs  mod.rs  technologies.rs
style/: about.scss  border.scss  colors.scss  footer.scss  header.scss  index.scss  projects.scss  skills.scss  text.scss
style/hf/: footer.scss  header.scss  shared.scss
