[package]
name = "the-site"
version = "0.1.0"
edition = "2024"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.23.0", features = ["csr"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-web = "0.1.3"
web-sys = { version = "0.3.98", features = ["HtmlAudioElement"] }
bitflags = "2.11.1"
smallvec = "1.15.1"
